# Python_core_Team_3

./: Clean_folder.py  LICENSE  Main_menu.py  Notes.py  Python_core_Team_3.py  README.md  pyproject.toml  requirements.txt  setup.py
personal_assistant/: Main_menu.py  NoteBook.txt  Notes.py  Python_core_Team_3.py
personal_assistant_cli_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pr_venv/: pyvenv.cfg
pr_venv/Scripts/: activate  activate.bat  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py
